pynestml/generated/PyNestMLParser.py
# Generated from PyNestML.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class PyNestMLParser ( Parser ):

    grammarFileName = "PyNestML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'integer'", u"'real'", u"'string'", 
                     u"'boolean'", u"'void'", u"'('", u"')'", u"'**'", u"'*'", 
                     u"'/'", u"'%'", u"'+'", u"'-'", u"'not'", u"'?'", u"'inf'", 
                     u"'~'", u"'&'", u"'^'", u"'|'", u"'<<'", u"'>>'", u"'<'", 
                     u"'<='", u"'=='", u"'!='", u"'<>'", u"'>='", u"'>'", 
                     u"'and'", u"'or'", u"','", u"'recordable'", u"'function'", 
                     u"'='", u"';'", u"'shape'", u"'+='", u"'-='", u"'*='", 
                     u"'/='", u"'['", u"']'", u"'[['", u"']]'", u"'return'", 
                     u"'if'", u"'elif'", u"'else'", u"'for'", u"'in'", u"'...'", 
                     u"'step'", u"'while'", u"'neuron'", u"'state'", u"'parameters'", 
                     u"'internals'", u"'initial_values'", u"'update'", u"'equations'", 
                     u"'input'", u"'<-'", u"'current'", u"'spike'", u"'inhibitory'", 
                     u"'excitatory'", u"'output'", u"'constraints'", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"':'", u"'end'", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'''" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"SL_COMMENT", u"ML_COMMENT", 
                      u"NEWLINE", u"WS", u"LINE_ESCAPE", u"BLOCK_OPEN", 
                      u"BLOCK_CLOSE", u"BOOLEAN_LITERAL", u"STRING_LITERAL", 
                      u"NAME", u"INTEGER", u"DIFFERENTIAL_ORDER", u"FLOAT" ]

    RULE_dataType = 0
    RULE_unitType = 1
    RULE_expression = 2
    RULE_simpleExpression = 3
    RULE_unaryOperator = 4
    RULE_bitOperator = 5
    RULE_comparisonOperator = 6
    RULE_logicalOperator = 7
    RULE_variable = 8
    RULE_functionCall = 9
    RULE_odeFunction = 10
    RULE_odeEquation = 11
    RULE_odeShape = 12
    RULE_block = 13
    RULE_stmt = 14
    RULE_compoundStmt = 15
    RULE_smallStmt = 16
    RULE_assignment = 17
    RULE_declaration = 18
    RULE_returnStmt = 19
    RULE_ifStmt = 20
    RULE_ifClause = 21
    RULE_elifClause = 22
    RULE_elseClause = 23
    RULE_forStmt = 24
    RULE_whileStmt = 25
    RULE_nestMLCompilationUnit = 26
    RULE_neuron = 27
    RULE_body = 28
    RULE_blockWithVariables = 29
    RULE_updateBlock = 30
    RULE_equationsBlock = 31
    RULE_inputBlock = 32
    RULE_inputLine = 33
    RULE_inputType = 34
    RULE_outputBlock = 35
    RULE_function = 36
    RULE_parameter = 37
    RULE_constraintsBlock = 38
    RULE_constraint = 39

    ruleNames =  [ u"dataType", u"unitType", u"expression", u"simpleExpression", 
                   u"unaryOperator", u"bitOperator", u"comparisonOperator", 
                   u"logicalOperator", u"variable", u"functionCall", u"odeFunction", 
                   u"odeEquation", u"odeShape", u"block", u"stmt", u"compoundStmt", 
                   u"smallStmt", u"assignment", u"declaration", u"returnStmt", 
                   u"ifStmt", u"ifClause", u"elifClause", u"elseClause", 
                   u"forStmt", u"whileStmt", u"nestMLCompilationUnit", u"neuron", 
                   u"body", u"blockWithVariables", u"updateBlock", u"equationsBlock", 
                   u"inputBlock", u"inputLine", u"inputType", u"outputBlock", 
                   u"function", u"parameter", u"constraintsBlock", u"constraint" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    SL_COMMENT=70
    ML_COMMENT=71
    NEWLINE=72
    WS=73
    LINE_ESCAPE=74
    BLOCK_OPEN=75
    BLOCK_CLOSE=76
    BOOLEAN_LITERAL=77
    STRING_LITERAL=78
    NAME=79
    INTEGER=80
    DIFFERENTIAL_ORDER=81
    FLOAT=82

    def __init__(self, input, output=sys.stdout):
        super(PyNestMLParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DataTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.DataTypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.isInt = None # Token
            self.isReal = None # Token
            self.isString = None # Token
            self.isBool = None # Token
            self.isVoid = None # Token
            self.unit = None # UnitTypeContext

        def unitType(self):
            return self.getTypedRuleContext(PyNestMLParser.UnitTypeContext,0)


        def getRuleIndex(self):
            return PyNestMLParser.RULE_dataType

        def accept(self, visitor):
            if hasattr(visitor, "visitDataType"):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = PyNestMLParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dataType)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNestMLParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                localctx.isInt = self.match(PyNestMLParser.T__0)
                pass
            elif token in [PyNestMLParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                localctx.isReal = self.match(PyNestMLParser.T__1)
                pass
            elif token in [PyNestMLParser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                localctx.isString = self.match(PyNestMLParser.T__2)
                pass
            elif token in [PyNestMLParser.T__3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                localctx.isBool = self.match(PyNestMLParser.T__3)
                pass
            elif token in [PyNestMLParser.T__4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                localctx.isVoid = self.match(PyNestMLParser.T__4)
                pass
            elif token in [PyNestMLParser.T__5, PyNestMLParser.NAME, PyNestMLParser.INTEGER]:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                localctx.unit = self.unitType(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnitTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.UnitTypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.base = None # UnitTypeContext
            self.left = None # UnitTypeContext
            self.leftParentheses = None # Token
            self.compoundUnit = None # UnitTypeContext
            self.rightParentheses = None # Token
            self.unitlessLiteral = None # Token
            self.divOp = None # Token
            self.right = None # UnitTypeContext
            self.unit = None # Token
            self.timesOp = None # Token
            self.powOp = None # Token
            self.exponent = None # Token

        def unitType(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PyNestMLParser.UnitTypeContext)
            else:
                return self.getTypedRuleContext(PyNestMLParser.UnitTypeContext,i)


        def INTEGER(self):
            return self.getToken(PyNestMLParser.INTEGER, 0)

        def NAME(self):
            return self.getToken(PyNestMLParser.NAME, 0)

        def getRuleIndex(self):
            return PyNestMLParser.RULE_unitType

        def accept(self, visitor):
            if hasattr(visitor, "visitUnitType"):
                return visitor.visitUnitType(self)
            else:
                return visitor.visitChildren(self)



    def unitType(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyNestMLParser.UnitTypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_unitType, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNestMLParser.T__5]:
                self.state = 89
                localctx.leftParentheses = self.match(PyNestMLParser.T__5)
                self.state = 90
                localctx.compoundUnit = self.unitType(0)
                self.state = 91
                localctx.rightParentheses = self.match(PyNestMLParser.T__6)
                pass
            elif token in [PyNestMLParser.INTEGER]:
                self.state = 93
                localctx.unitlessLiteral = self.match(PyNestMLParser.INTEGER)
                self.state = 94
                localctx.divOp = self.match(PyNestMLParser.T__9)
                self.state = 95
                localctx.right = self.unitType(2)
                pass
            elif token in [PyNestMLParser.NAME]:
                self.state = 96
                localctx.unit = self.match(PyNestMLParser.NAME)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 108
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = PyNestMLParser.UnitTypeContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unitType)
                        self.state = 99
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 102
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [PyNestMLParser.T__8]:
                            self.state = 100
                            localctx.timesOp = self.match(PyNestMLParser.T__8)
                            pass
                        elif token in [PyNestMLParser.T__9]:
                            self.state = 101
                            localctx.divOp = self.match(PyNestMLParser.T__9)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 104
                        localctx.right = self.unitType(4)
                        pass

                    elif la_ == 2:
                        localctx = PyNestMLParser.UnitTypeContext(self, _parentctx, _parentState)
                        localctx.base = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_unitType)
                        self.state = 105
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 106
                        localctx.powOp = self.match(PyNestMLParser.T__7)
                        self.state = 107
                        localctx.exponent = self.match(PyNestMLParser.INTEGER)
                        pass

             
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PyNestMLParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExpressionContext
            self.condition = None # ExpressionContext
            self.leftParentheses = None # Token
            self.term = None # ExpressionContext
            self.rightParentheses = None # Token
            self.logicalNot = None # Token
            self.powOp = None # Token
            self.right = None # ExpressionContext
            self.timesOp = None # Token
            self.divOp = None # Token
            self.moduloOp = None # Token
            self.plusOp = None # Token
            self.minusOp = None # Token
            self.ifTrue = None # ExpressionContext
            self.ifNot = None # ExpressionContext

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PyNestMLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PyNestMLParser.ExpressionContext,i)


        def unaryOperator(self):
            return self.getTypedRuleContext(PyNestMLParser.UnaryOperatorContext,0)


        def simpleExpression(self):
            return self.getTypedRuleContext(PyNestMLParser.SimpleExpressionContext,0)


        def bitOperator(self):
            return self.getTypedRuleContext(PyNestMLParser.BitOperatorContext,0)


        def comparisonOperator(self):
            return self.getTypedRuleContext(PyNestMLParser.ComparisonOperatorContext,0)


        def logicalOperator(self):
            return self.getTypedRuleContext(PyNestMLParser.LogicalOperatorContext,0)


        def getRuleIndex(self):
            return PyNestMLParser.RULE_expression

        def accept(self, visitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyNestMLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyNestMLParser.T__5]:
                self.state = 114
                localctx.leftParentheses = self.match(PyNestMLParser.T__5)
                self.state = 115
                localctx.term = self.expression(0)
                self.state = 116
                localctx.rightParentheses = self.match(PyNestMLParser.T__6)
                pass
            elif token in [PyNestMLParser.T__11, PyNestMLParser.T__12, PyNestMLParser.T__16]:
                self.state = 118
                self.unaryOperator()
                self.state = 119
                localctx.term = self.expression(9)
                pass
            elif token in [PyNestMLParser.T__13]:
                self.state = 121
                localctx.logicalNot = self.match(PyNestMLParser.T__13)
                self.state = 122
                localctx.term = self.expression(4)
                pass
            elif token in [PyNestMLParser.T__15, PyNestMLParser.BOOLEAN_LITERAL, PyNestMLParser.STRING_LITERAL, PyNestMLParser.NAME, PyNestMLParser.INTEGER, PyNestMLParser.FLOAT]:
                self.state = 123
                self.simpleExpression()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 162
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 160
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = PyNestMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 126
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 127
                        localctx.powOp = self.match(PyNestMLParser.T__7)
                        self.state = 128
                        localctx.right = self.expression(10)
                        pass

                    elif la_ == 2:
                        localctx = PyNestMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 129
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 133
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [PyNestMLParser.T__8]:
                            self.state = 130
                            localctx.timesOp = self.match(PyNestMLParser.T__8)
                            pass
                        elif token in [PyNestMLParser.T__9]:
                            self.state = 131
                            localctx.divOp = self.match(PyNestMLParser.T__9)
                            pass
                        elif token in [PyNestMLParser.T__10]:
                            self.state = 132
                            localctx.moduloOp = self.match(PyNestMLParser.T__10)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 135
                        localctx.right = self.expression(9)
                        pass

                    elif la_ == 3:
                        localctx = PyNestMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 136
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 139
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [PyNestMLParser.T__11]:
                            self.state = 137
                            localctx.plusOp = self.match(PyNestMLParser.T__11)
                            pass
                        elif token in [PyNestMLParser.T__12]:
                            self.state = 138
                            localctx.minusOp = self.match(PyNestMLParser.T__12)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 141
                        localctx.right = self.expression(8)
                        pass

                    elif la_ == 4:
                        localctx = PyNestMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 142
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 143
                        self.bitOperator()
                        self.state = 144
                        localctx.right = self.expression(7)
                        pass

                    elif la_ == 5:
                        localctx = PyNestMLParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 146
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 147
                        self.comparisonOperator()
                        self.state = 148
                        localctx.right = self.expression(6)
                        pass
